Fixed z-index issue with tab bar styles.

--- a/pushpop-tab-view/pushpop-tab-view.css
+++ b/pushpop-tab-view/pushpop-tab-view.css
@@ -32,7 +32,6 @@
   padding: 2px;
   width: auto;
   height: 43px;
-  z-index: 999999;
   -webkit-box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3);
      -moz-box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3);
           box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3);
